# yastwai

./: Cargo.toml  README.md  conf.example.json
benches/: quality_bench.rs  translation_bench.rs
src/: app_config.rs  app_controller.rs  errors.rs  file_utils.rs  lib.rs  main.rs  subtitle_processor.rs  utils.rs
src/database/: mod.rs
src/providers/: anthropic.rs  http_client.rs  mock.rs  mod.rs  ollama.rs  openai.rs  retry.rs
src/session/: manager.rs  mod.rs  models.rs
src/translation/: batch.rs  cache.rs  concurrency.rs  core.rs  formatting.rs  mod.rs  speculative.rs  subtitle_standards.rs
src/translation/context/: glossary.rs  mod.rs  summary.rs
src/translation/document/: mod.rs
src/translation/pipeline/: adapter.rs  mod.rs  orchestrator.rs  reflection_pass.rs  translation_pass.rs  validation_pass.rs
src/translation/prompts/: mod.rs  templates.rs
src/translation/quality/: consistency.rs  errors.rs  metrics.rs  mod.rs
src/validation/: formatting.rs  markers.rs  mod.rs  service.rs
tests/common/: mock_providers.rs
tests/integration/: provider_api_tests.rs  translation_pipeline_tests.rs
tests/unit/: network_monitor_tests.rs  pipeline_tests.rs  providers_tests.rs  translation_tests.rs
tests/unit/providers/: anthropic_test.rs  ollama_test.rs  openai_test.rs
