[package]
name = "yastwai"
version = "1.1.0"
edition = "2024"
readme = "README.md"
rust-version = "1.85.0"
license = "MIT"

[dependencies]
# Core utilities
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# HTTP and API client
reqwest = { version = "0.11.22", features = ["json"] }
url = "2.5"

# File processing
walkdir = "2.5"
regex = "1.10.2"
chrono = "0.4"
tempfile = "3.10"

# CLI interface and progress
indicatif = "0.17.8"
clap = { version = "4.4", features = ["derive", "env", "string"] }
clap_complete = "4.4"

# Additional dependencies
isolang = { version = "2.4.0", features = ["local_names", "english_names"] }
thiserror = "1.0.50"

# Database and persistence
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

# Directory management
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4.3"
env_logger = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "translation_bench"
harness = false

[[bench]]
name = "quality_bench"
harness = false
